<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.nytimessearch.SearchActivity">

    <item
        android:id="@+id/miFilter"
        android:orderInCategory="5"
        android:icon="@drawable/ic_sort_black_24dp"
        android:onClick="onClickFilter"
        app:showAsAction="ifRoom"
        android:title="@string/filer" />

    <item
        android:id="@+id/miSearch"
        android:orderInCategory="5"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
